# sc_comment_scraper

./: .gitignore  LICENSE.txt  README.md  README.txt  pyproject.toml  requirements.txt
sc_comment_scraper/: check_dir.py  check_dir_test.py  config.py  da_frame.py  filter_frame.py  filter_popup.py  main.py  scraper.py  scraping_frame.py  settings.py  settings_frame.py  settings_popup.py  start_frame.py  test_check_dir.py  url_frame.py  url_input.py
sc_comment_scraper/Drivers/.wdm/: drivers.json
sc_comment_scraper/csv_exports/: headieone, headie-one-50s       [filter ].csv.csv  headieone, headie-one-martins-sofa [filter ].csv.csv  headieone, headie-one-x-abra-cadabra-x [filter ].csv.csv  test(1).csv  test(10).csv  test(6).csv  test(7).csv  test(8).csv  test(9).csv  test.csv  testgui.csv  url].csv.csv
sc_comment_scraper/url_lists/: test single.txt  test.txt
src/app/: main.py
src/app/backend/: backup_ui.py  check_dir.py  csv_path.py  filters.py  paths.py  scraper.py  settings.py  url_input.py
src/app/gui/: config.py  da_frame.py  filter_frame.py  filter_popup.py  scraping_frame.py  settings_frame.py  settings_popup.py  start_frame.py  url_frame.py
src/app/url_lists/: test.txt
tests/: conftest.py  test_check_dir.py  test_csv_path.py  test_url_input.py
tests/test_data/: test_urls.txt
